2016-07-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSDictionary.m
	* Tests/base/NSDictionary/general.m:
	Fix -getObjects:andKeys:
	
2016-07-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSData.h
	* Source/NSData.m
	* Tests/base/NSData/general.m:
	Implement OS X 10.9 method -initWithBytesNoCopy:length:deallocator:
	that allows customising data deallocation based on a caller
	supplied block. Also adds test cases for this functionality.

2016-07-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSStream.m:
	* Source/GSSocketStream.m:
	In -close we should close the underlying file descriptor (even if the
	stream has not formally been opened yet) to ensure we don't leak it.
	In -dealloc, if the file descriptor still exists, we should call the
	-close method.

2016-07-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/NSObject+GNUstepbase.m: use separate lock to
	protect at exit methods ... avoid conflict/deadlock with multithreaded
	notification change.

2016-07-18  Larry Campbell <lcampbel@akamai.com>

	* Source/NSThread.m: Send notification about becoming multithreaded
	when the new thread is registered from outside our API.

2016-07-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: avoid sorting the queue ... keep the array of
	waiting operations sorted by inserting new operations at the correct
	position and observing the queuePriority of waiting operations (and
	re-positiuoning them in the waiting array as necessary).
	Fix for scalability problem (bug #47926)

2016-07-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/GSRunLoopCtxt.m: fix bug in return value when polling.
	The poll method must return YES if any input source fired, including
	handling of windows messages which are already available and require
	no wait.

2016-07-15  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac:
        * Headers/GNUstepBase/config.h.in:
        * Source/GSQuickSort.m: