@@ -1,3 +1,12 @@
+2016-07-27  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Header/Foundation/NSData.h
+	* Source/NSData.m:
+	Make the deallocator block a direct ivar of NSDataMalloc
+	(or NSMutableDataMalloc respectively). Breaks binary 
+	compatibility but avoids reallocating objects based on 
+	the initializer used.
+
 2016-07-26  Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Source/NSDictionary.m
